2014-01-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge into ../../../gnu/Makefile.am and remove.

2013-12-30  Per Bothner  <per@bothner.com>

	* RunProcess.java (doit): Add support for reading from a port.
	Add suport for 'current as a port specifier.
	Copy output/error to ports in a thread.

2013-12-29  Per Bothner  <per@bothner.com>

	* CompileMisc.java (compileEq): Optimize to use ifnull/ifnonnull
	instructions if comparing against #!null.

2013-12-26  Per Bothner  <per@bothner.com>

	* RunProcess.java: Add near-complete support for Java 6-or-older.
	Add support for 'out-to: PORT' and 'err-to: PORT'.

2013-12-22  Per Bothner  <per@bothner.com>

	* RunProcess.java: New class extends MethodProc,
	implements the Scheme 'run-process'.
	* CompileProcess.java: New class optimizes of RunProcess.
	* LProcess.java: new class, etends Process.
	* Makefile.am: Update for new files.

	* LispFormat.java (<init>): Implement new 'Q' specifier.

2013-12-12  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyWithExceptionHandler): New method.
	(validateApplyCallCC): Pass through required type.

2013-11-26  Per Bothner  <per@bothner.com>

	* CompileMisc.java (compileCallCC): When inlining function being
	called, create a dummy ApplyExp rather than just callingf its body.
	This fixes Savannah bug #40649 "NPE in inline-compiler for CallCC".

2013-11-24  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyMakeProcedure):
	Use new checkLiteralKeyword method.

2013-11-13  Per Bothner  <per@bothner.com>

	* IsEqual.java (apply): Use size method rather than field.
	* ParseFormat.java (asFormat): Likewise.

2013-11-03  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (apply2): Update for new Values API.

2013-09-29  Per Bothner  <per@bothner.com>

	* UnicodeUtils.java (foldCase); Re-write to be more efficient,
	and fix some corner-case errors.
	Also change return type to CharSequence.

2013-09-27  Per Bothner  <per@bothner.com>
