@@ -52,6 +52,44 @@
   (test-str-equal "|cmd|a b |c|d|z|\n"
                   &`{&[split-with-kawa] cmd 'a &[vu]z'}))
 
+;; Check final-newline-removal
+(test-str-equal "|xa/by|\n"
+                 &`{&[split-with-kawa] x&["a/b"]y})
+(test-str-equal "|xa/by|\n"
+                 &`{&[split-with-kawa] x&["a/b\n"]y})
+(test-str-equal "|xa/by|\n"
+                 &`{&[split-with-kawa] x&["a/b\n\n"]y})
+(test-str-equal "|xa|cy|\n"
+                 &`{&[split-with-kawa] x&["a\nc"]y})
+(test-str-equal "|xa|cy|\n"
+                 &`{&[split-with-kawa] x&["a\n\nc"]y})
+(test-str-equal "|xa|cy|\n"
+                 &`{&[split-with-kawa] x&["a\n\nc\n"]y})
+(test-str-equal "|xa\ncy|\n"
+                 &`{&[split-with-kawa] "x&["a\nc"]y"})
+(test-str-equal "|xa\n\ncy|\n"
+                 &`{&[split-with-kawa] "x&["a\n\nc"]y"})
+(test-str-equal "|xa\n\ncy|\n"
+                 &`{&[split-with-kawa] "x&["a\n\nc\n"]y"})
+(test-str-equal "|xa/by|\n"
+                 &sh{&[split-with-kawa] x&["a/b"]y})
+(test-str-equal "|xa/by|\n"
+                 &sh{&[split-with-kawa] x&["a/b\n"]y})
+(test-str-equal "|xa/by|\n"
+                 &sh{&[split-with-kawa] x&["a/b\n\n"]y})
+(test-str-equal "|xa|cy|\n"
+                 &sh{&[split-with-kawa] x&["a\nc"]y})
+(test-str-equal "|xa|cy|\n"
+                 &sh{&[split-with-kawa] x&["a\n\nc"]y})
+(test-str-equal "|xa|cy|\n"
+                 &sh{&[split-with-kawa] x&["a\n\nc\n"]y})
+(test-str-equal "|xa\ncy|\n"
+                 &sh{&[split-with-kawa] "x&["a\nc"]y"})
+(test-str-equal "|xa\n\ncy|\n"
+                 &sh{&[split-with-kawa] "x&["a\n\nc"]y"})
+(test-str-equal "|xa\n\ncy|\n"
+                 &sh{&[split-with-kawa] "x&["a\n\nc\n"]y"})
+
 (let ((tmp1 (java.io.File:createTempFile "kawa-test" #!null)))
   &`[out-to: tmp1]{echo ab cd}
   &`[out-to: tmp1]{echo cd ef}
@@ -70,6 +108,7 @@
  ((current-output-port (open-output-string)))
  (write-string "(* ")
  &`[out-to: 'current]{echo -n bar baz}
+ (sleep 0.1) ;; This is rather clunky.
  (write-string " *)")
  (test-equal "(* bar baz *)" (get-output-string (current-output-port))))
 
