@@ -1,3 +1,8 @@
+2014-01-27  Per Bothner  <per@bothner.com>
+
+	* RunProcess.java (handleMarks, tokenize): Fix some problems
+	in handling of final skippable newlines in substituted text.
+
 2014-01-05  Per Bothner  <per@bothner.com>
 
 	* Makefile.am: Merge into ../../../gnu/Makefile.am and remove.
